src/test/ui/impl-trait/where-allowed-2.stderr
error[E0282]: type annotations needed
  --> $DIR/where-allowed-2.rs:3:30
   |
LL | fn in_adt_in_return() -> Vec<impl Debug> { panic!() }
   |                              ^^^^^^^^^^ cannot infer type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
